[package]
name = "reth-valida"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
radium = { git = "https://github.com/lita-xyz/ferrilab.git", branch = "radium-0.7.0-delendum" }
cc = { git = "https://github.com/lita-xyz/cc-rs.git", branch = "1.1.18-delendum" }
blst = { git = "https://github.com/lita-xyz/blst.git", branch = "0.3.13-delendum" }
c-kzg = { git = "https://github.com/lita-xyz/c-kzg-4844.git", branch = "1.0.3-delendum" }
zstd-sys = { git = "https://github.com/lita-xyz/zstd-rs.git", branch = "zstd-sys-2.0.13-delendum" }

[dependencies]
valida-rs = { git = "https://github.com/lita-xyz/valida-rs.git", branch = "main" }
revm = { version = "15.0.0", features = ["std", "optional_balance_check"], default-features = false }
reth-primitives = { git = "https://github.com/lita-xyz/reth.git", branch = "1.1.1-delendum" }
reth-chainspec = { git = "https://github.com/lita-xyz/reth.git", branch = "1.1.1-delendum" }
reth-trie-common = { git = "https://github.com/lita-xyz/reth.git", branch = "1.1.1-delendum" }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
alloy-rpc-types = "0.5.4"
alloy-consensus = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0"
alloy-primitives = { version = "0.8.3", default-features = false, features = [
    "rlp",
    "serde",
    "std",
    "tiny-keccak"
] }
rlp = "0.5.2"
anyhow = "1.0.75"
hashbrown = "0.14.3"
hex = "0.4.3"
getrandom = "0.2.15"
